fixed header width on mobile

--- a/index.css
+++ b/index.css
@@ -60,7 +60,7 @@ html {
         border: none;
         outline: none;
         cursor: pointer;
-        padding: 14px 16px;
+        padding: 14px 10px;
         margin: 5px 5px;
         transition: 0.3s;
     }
